--- a/app/javascript/components/Navbar/style.scss
+++ b/app/javascript/components/Navbar/style.scss
@@ -12,22 +12,22 @@
   align-items: center;
 }
 
-.container {
+.navbar .navbar-container {
   display: flex;
   align-items: center;
   margin-left: 16px;
 }
 
-.container-environment {
+.navbar .navbar-container .container-environment {
   width: 500px;
   background-color: $primary_color;
   border: 1px solid #ffffff;
   border-radius: 5px;
-  margin-left: 32px;
+  margin-left: 18px;
   cursor: pointer;
 }
 
-.container-environment h1 {
+.navbar .navbar-container .container-environment h1 {
   font-size: 20px;
   font-weight: normal;
   color: #ffffff;
