Finished notes creation and started dragging methods

--- a/app/javascript/components/OptionMenu/style.scss
+++ b/app/javascript/components/OptionMenu/style.scss
@@ -1,5 +1,5 @@
 .container-menu {
-  width: 150px;
+  width: 120px;
   height: 58px;
   background-color: #ccc;
   position: absolute;
@@ -15,6 +15,7 @@
 
 .container-menu .content-menu .content-menu-links {
   font-size: 15px;
+  font-weight: 300;
   color: #121212;
   text-decoration: none;
   text-align: center;
