--- a/app/javascript/pages/SignIn/style.scss
+++ b/app/javascript/pages/SignIn/style.scss
@@ -118,11 +118,11 @@
 /* Style the checkmark/indicator */
 .container-checkbox .checkmark:after {
   left: 4px;
-  top: 1px;
+  top: 0px;
   width: 5px;
-  height: 7px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
+  height: 9px;
+  border: 1px solid white;
+  border-width: 0 2px 2px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
