--- a/app/javascript/components/Navbar/style.scss
+++ b/app/javascript/components/Navbar/style.scss
@@ -18,7 +18,7 @@
   margin-left: 16px;
 }
 
-.navbar .navbar-container .container-environment {
+.navbar .navbar-container .container-environments {
   width: 500px;
   background-color: $primary_color;
   border: 1px solid #ffffff;
@@ -27,9 +27,31 @@
   cursor: pointer;
 }
 
-.navbar .navbar-container .container-environment h1 {
+.navbar .navbar-container .container-environments h1 {
   font-size: 20px;
   font-weight: normal;
   color: #ffffff;
-  margin: 12px;
+  padding: 12px;
+}
+
+.navbar .navbar-container .container-environments ul {
+  width: 500px;
+  display: none;
+}
+
+.navbar .navbar-container .container-environments:hover ul {
+  display: inline;
+  position: absolute;
+  z-index: 1;
+}
+
+.navbar .navbar-container .container-environments:hover ul li {
+  list-style: none;
+  background-color: $primary_color;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+  padding: 12px;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: normal;
 }
