--- a/app/javascript/components/Note/style.scss
+++ b/app/javascript/components/Note/style.scss
@@ -5,9 +5,8 @@
   width: 200px;
   height: 250px;
   background-color: #ffffff;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
-  display: flex;
+  display: block;
   flex-direction: column;
 }
 
@@ -37,7 +36,12 @@
 }
 
 .note .container-description {
-  margin-top: 16px;
-  margin-left: 12px;
+  width: 100%;
+  height: 200px;
+  background-color: #ffffff;
+  padding: 15px 12px 15px 12px;
   font-size: 16px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
