--- a/app/javascript/components/OptionMenu/style.scss
+++ b/app/javascript/components/OptionMenu/style.scss
@@ -3,6 +3,7 @@
   height: 58px;
   background-color: #ccc;
   position: absolute;
+  z-index: 1;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
