--- a/app/javascript/components/TaskListItem/style.scss
+++ b/app/javascript/components/TaskListItem/style.scss
@@ -3,12 +3,26 @@
 .container-item {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   font-size: 16px;
   margin-bottom: 5px;
 }
 
-input[type="checkbox"] {
+.container-item .delete-icon {
+  display: none;
+}
+
+.container-item:hover .delete-icon {
+  display: block;
+}
+
+.container-item div {
+  display: flex;
+  flex-direction: row;
+}
+
+.container-item div input[type="checkbox"] {
   position: relative;
   width: 1.2em;
   height: 1.2em;
@@ -44,7 +58,7 @@ input[type="checkbox"] {
   }
 }
 
-label {
+.container-item div label {
   padding-left: 0.3em;
   &::before {
     position: absolute;
