--- a/app/javascript/components/Navbar/style.scss
+++ b/app/javascript/components/Navbar/style.scss
@@ -20,26 +20,27 @@
 
 .navbar .navbar-container .container-environments {
   width: 500px;
-  // background-color: $primary_color;
-  // border: 1px solid #ffffff;
-  // border-radius: 5px;
+  background-color: $primary_color;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
   margin-left: 25px;
   // cursor: pointer;
 }
 
-.navbar .navbar-container .container-environments input {
+.navbar .navbar-container .container-environments h1 {
   display: block;
-  background-color: $primary_color;
-  border: 1px solid #fff;
-  width: 500px;
-  border-radius: 5px;
+  // background-color: $primary_color;
+  // border: 1px solid #fff;
+  // width: 500px;
+  // border-radius: 5px;
   font-size: 20px;
   font-weight: normal;
   color: #ffffff;
-  padding: 12px;
+  // padding: 12px;
+  margin: 12px;
 }
 
-.navbar .navbar-container .container-environments input:focus {
+.navbar .navbar-container .container-environments h1:focus {
   outline: none;
 }
 
