--- a/app/javascript/components/TaskListItem/style.scss
+++ b/app/javascript/components/TaskListItem/style.scss
@@ -50,6 +50,16 @@ input[type='checkbox'] {
   width: 100%;
 }
 
+.container-item .left-container-item p:focus {
+  outline: none;
+}
+
+[contenteditable]:empty:before {
+  content: attr(placeholder);
+  display: block;
+  opacity: 0.5;
+}
+
 .container-item .delete-icon {
   display: flex;
   align-items: baseline;
