--- a/app/javascript/pages/Profile/style.scss
+++ b/app/javascript/pages/Profile/style.scss
@@ -3,6 +3,7 @@
 .profile {
   background-color: #f8f9fc;
   width: 100%;
+  height: 100vh;
 }
 
 .profile nav {
@@ -16,15 +17,15 @@
 .profile .profile-picture {
   display: flex;
   justify-content: center;
-  height: 200px;
+  height: 150px;
 }
 
 .profile .img {
   background-color: darkgray;
   position: absolute;
   top: 30px;
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border-radius: 100%;
 }
 
@@ -55,7 +56,7 @@
   margin-left: 58px;
 } 
 
-#styled {
+#styled-tabs {
   border-bottom: 3px solid $primary_color;
   color: $second_color;
 }
