--- a/app/javascript/components/NoteStructure/style.scss
+++ b/app/javascript/components/NoteStructure/style.scss
@@ -59,3 +59,9 @@
   border-bottom-right-radius: 15px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+[contenteditable]:empty:before {
+  content: attr(placeholder);
+  display: block;
+  opacity: 0.5;
+}
