--- a/app/javascript/components/Environments/style.scss
+++ b/app/javascript/components/Environments/style.scss
@@ -13,7 +13,7 @@
   justify-content: center;
   width: 60%;
   margin: 30px auto 0 auto;
-  background-color: #FFFFFF;
+  border: 1px solid #ddd;
   border-radius: 10px;
 }
 
@@ -21,6 +21,8 @@
   width: 30%;
   background-color: #F5F5F5;
   padding: 0 0 10px 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .environments-container .environments-inner-container .environments-list ul {
@@ -39,7 +41,7 @@
   cursor: pointer;
 }
 
-#styled {
+.environments-container .environments-inner-container .environments-list ul .styled {
   border-right: 3px solid $primary_color;
   color: $second_color;
 }
@@ -50,6 +52,8 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .environments-container .environments-inner-container .environments-content .description p {
@@ -65,6 +69,13 @@
   width: 100%;
   overflow-x: scroll;
   padding-bottom: 20px;
+  min-height: 132px;
+}
+
+.environments-container .environments-inner-container .environments-content .content-users:hover {
+  &::-webkit-scrollbar-thumb {
+    visibility: visible;
+  }
 }
 
 ::-webkit-scrollbar {
@@ -82,6 +93,7 @@
   background: $second_color;
   border-radius: 10px;
   height: 5px;
+  visibility: hidden;
 }
 
 /* Handle on hover */
@@ -97,6 +109,7 @@
   margin-right: 20px;
 }
 
+
 .environments-container .environments-inner-container .environments-content .content-users .users p {
   text-align: center;
   font-weight: 300;
@@ -110,10 +123,27 @@
   margin-top: 5px;
 }
 
-.environments-container .environments-inner-container .environments-content .content-users .users img {
-  background-color: darkgray;
+.environments-container .environments-inner-container .environments-content .content-users .users div {
+  background-color: #c1c9cc;
   width: 64px;
   height: 64px;
+  border-radius: 100%;
+  display: flex;
+}
+
+.environments-container .environments-inner-container .environments-content .content-users .users div img {
+  background-color: #c1c9cc;
+  width: 64px;
+  height: 64px;
+  border-radius: 100%;
+}
+
+.environments-container .environments-inner-container .environments-content .content-users .users div #user-photo {
+  background-color: #c1c9cc;
+  width: 48px;
+  height: 48px;
+  color: #fff;
+  margin: auto;
   border-radius: 100%;
 }
 
