--- a/app/javascript/components/Navbar/style.scss
+++ b/app/javascript/components/Navbar/style.scss
@@ -68,6 +68,12 @@
   opacity: 0.5;
 }
 
+li:empty:before {
+  content: attr(placeholder);
+  display: block;
+  opacity: 0.5;
+}
+
 .navbar .navbar-container .container-environments:hover ul li {
   list-style: none;
   background-color: $primary_color;
