--- a/app/javascript/pages/Profile/account_style.scss
+++ b/app/javascript/pages/Profile/account_style.scss
@@ -12,7 +12,8 @@
   width: 40%;
   margin: 30px auto 0 auto;
   padding: 30px 0;
-  background-color: #FFFFFF;
+  background-color: #f8f9fc;
+  border: 1px solid #ddd;
   border-radius: 10px;
 }
 
@@ -94,4 +95,10 @@
 
 .account-container .account-inner-container button:hover {
   filter: brightness(90%);
+}
+
+[contenteditable]:empty:before {
+  content: attr(placeholder);
+  display: block;
+  opacity: 0.5;
 }
