--- a/app/javascript/components/NoteStructure/style.scss
+++ b/app/javascript/components/NoteStructure/style.scss
@@ -58,7 +58,38 @@
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  overflow-y: scroll;
 }
+
+.note .container-description:hover {
+  &::-webkit-scrollbar-thumb {
+    visibility: visible;
+  }
+}
+
+::-webkit-scrollbar {
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ffffff;
+  border-radius: 10px;
+  width: 5px;
+  visibility: hidden;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $primary_color;
+}
+
 
 [contenteditable]:empty:before {
   content: attr(placeholder);
