--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,19 @@
-<h2>Forgot your password?</h2>
+<div class="password-outer-container">
+  <div class="password-container">
+    <div class="password-inner-container">
+      <%= image_tag("Remind.svg", :alt => "Remind") %>
+      
+      <p class="password-reset-description">Write your email and we'll send you instructions to reset your password</p>
+      <%= form_for(resource, as: resource_name, class: "password-inner-container-form", url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= f.email_field :email, autofocus: true, placeholder: "Email", autocomplete: "email", class: "password-form-input" %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="password-form-options">
+          <p class="text-back-login">
+            <%= link_to "Back to log in", new_session_path(resource_name) %>
+          </p>
+          <%= f.submit "Confirm", class: 'password-form-button' %>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
