--- a/app/javascript/components/NoteStructure/style.scss
+++ b/app/javascript/components/NoteStructure/style.scss
@@ -2,11 +2,15 @@
 
 .note {
   position: absolute;
+  min-width: 200px;
+  min-height: 250px;
   width: 200px;
   height: 250px;
   background-color: #ffffff;
   border-radius: 15px;
-  display: block;
+  display: flex;
+  resize: both;
+  overflow: auto;
   flex-direction: column;
 }
 
@@ -51,7 +55,7 @@
 
 .note .container-description {
   width: 100%;
-  height: 200px;
+  height: 100%;
   background-color: #ffffff;
   padding: 15px 12px 15px 12px;
   font-size: 16px;
@@ -68,7 +72,7 @@
 }
 
 ::-webkit-scrollbar {
-  height: 5px;
+  width: 5px;
 }
 
 /* Track */
