--- a/app/javascript/pages/Profile/account_style.scss
+++ b/app/javascript/pages/Profile/account_style.scss
@@ -78,13 +78,13 @@
 
 .account-container .account-inner-container a {
   margin-bottom: 20px;
-  color: #4280DE;
+  color: #00A5CF;
 }
 
 .account-container .account-inner-container button {
   width: 150px;
   padding: 10px 15px;
-  background-color: #F60C0C;
+  background-color: #D72638;
   color: #fff;
   border: none;
   border-radius: 5px;
