Feat delete account and change password popups

--- a/app/javascript/pages/Profile/account_style.scss
+++ b/app/javascript/pages/Profile/account_style.scss
@@ -79,6 +79,7 @@
 .account-container .account-inner-container a {
   margin-bottom: 20px;
   color: #00A5CF;
+  cursor: pointer;
 }
 
 .account-container .account-inner-container button {
