Feat invitation popup

--- a/app/javascript/components/Environments/style.scss
+++ b/app/javascript/components/Environments/style.scss
@@ -186,8 +186,9 @@
   width: 100px;
   padding: 10px 15px;
   margin-top: 25px;
-  background-color: transparent;
-  color: #00A5CF;
+  background-color: #00A5CF;
+  color: #fff;
+  outline: none;
   border: none;
   border-radius: 5px;
   font-size: 16px;
@@ -199,8 +200,9 @@
   width: 100px;
   padding: 10px 15px;
   margin-top: 25px;
-  background-color: #D72638;
-  color: #fff;
+  background-color: transparent;
+  color: #D72638;
+  outline: none;
   border: none;
   border-radius: 5px;
   font-size: 16px;
