--- a/app/javascript/components/Popup/style.scss
+++ b/app/javascript/components/Popup/style.scss
@@ -8,7 +8,6 @@
   top: 0;
   left: 0;
   display: flex;
-  
 }
 
 .outter-popup-container .popup-container {
@@ -22,9 +21,18 @@
   align-items: center;
 }
 
-.outter-popup-container .popup-container h1 {
+.outter-popup-container .popup-container .popup-container-title {
+  width: 100%;
+  margin: 30px 0 50px 0;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.outter-popup-container .popup-container .popup-container-title h1 {
   color: #303030;
-  margin: 30px auto 50px auto;
   font-weight: normal;
 }
 
