--- a/app/javascript/pages/Main/style.scss
+++ b/app/javascript/pages/Main/style.scss
@@ -1,3 +1,16 @@
 .content {
   height: 100vh;
 }
+
+.content .without-content {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.content .without-content p {
+  color: #303030;
+  font-size: 18px;
+}
