Refactor delete popup code

--- a/app/javascript/components/Popup/Delete/style.scss
+++ b/app/javascript/components/Popup/Delete/style.scss
@@ -6,6 +6,13 @@
   word-wrap: break-word;  
 }
 
+.leave-environment-description {
+  font-size: 16px;
+  color: #666666;
+  word-wrap: break-word; 
+  text-align: center;
+}
+
 .delete-account-buttons {
   margin: 50px 0;
   display: flex;
