--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'remind' %>
     <%= javascript_pack_tag 'remind' %>
+    <%= favicon_link_tag 'favicon.ico' %>
   </head>
 
   <body>
